[REFACTOR] Replace .get(0) with .getFirst() in PostServiceTest